# repo-compdb-splitter

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build_and_copy.sh  conanfile.py  go.mod  go.sum  main.cpp  main.go
cmake/: googletest.cmake
common/trie/: trie.go
doc/: requirements-spec.md
include/splitter/: commands.h  consts.h  filesystem.h  trie.hpp  util.hpp  xml_trie.hpp
model/: compdb.go
src/: commands.cpp  main.cpp
tests/: CMakeLists.txt  trie_test.cpp
